force-app/main/default/objects/Objects__c/Objects__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Objects</label>
</CustomObject>