force-app/main/default/objects/Objects__c/fields/Client_Address_City__c.field-meta.xml
<CustomField>
    <fullName>Client_Address_City__c</fullName>
    <label>Client Address City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>