force-app/main/default/objects/Objects__c/fields/Client_Address_Country__c.field-meta.xml
<CustomField>
    <fullName>Client_Address_Country__c</fullName>
    <label>Client Address Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>