force-app/main/default/objects/Objects__c/fields/Client_Address_Postcode__c.field-meta.xml
<CustomField>
    <fullName>Client_Address_Postcode__c</fullName>
    <label>Client Address Postcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>