force-app/main/default/objects/Objects__c/fields/Client_Email__c.field-meta.xml
<CustomField>
    <fullName>Client_Email__c</fullName>
    <label>Client Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>