force-app/main/default/objects/Objects__c/fields/Client_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_First_Name__c</fullName>
    <label>Client First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>