force-app/main/default/objects/Objects__c/fields/Client_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Last_Name__c</fullName>
    <label>Client Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>