force-app/main/default/objects/Objects__c/fields/Client_Object__c.field-meta.xml
<CustomField>
    <fullName>Client_Object__c</fullName>
    <label>Client Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>