force-app/main/default/objects/Objects__c/fields/Client_Phone__c.field-meta.xml
<CustomField>
    <fullName>Client_Phone__c</fullName>
    <label>Client Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>