force-app/main/default/objects/Objects__c/fields/Client_Profile_Image__c.field-meta.xml
<CustomField>
    <fullName>Client_Profile_Image__c</fullName>
    <label>Client Profile Image</label>
    <length>255</length>
    <type>Text</type>
</CustomField>