force-app/main/default/objects/Objects__c/fields/Event_Attended__c.field-meta.xml
<CustomField>
    <fullName>Event_Attended__c</fullName>
    <label>Event Attended</label>
    <length>255</length>
    <type>Text</type>
</CustomField>