force-app/main/default/objects/Objects__c/fields/Event_Client__c.field-meta.xml
<CustomField>
    <fullName>Event_Client__c</fullName>
    <label>Event Client</label>
    <length>255</length>
    <type>Text</type>
</CustomField>