force-app/main/default/objects/Objects__c/fields/Event_Created_By__c.field-meta.xml
<CustomField>
    <fullName>Event_Created_By__c</fullName>
    <label>Event Created By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>