force-app/main/default/objects/Objects__c/fields/Event_End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Event_End_Date_Time__c</fullName>
    <label>Event End Datetime</label>
    <length>255</length>
    <type>Text</type>
</CustomField>