force-app/main/default/objects/Objects__c/fields/Event_Object__c.field-meta.xml
<CustomField>
    <fullName>Event_Object__c</fullName>
    <label>Event Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>