force-app/main/default/objects/Objects__c/fields/Event_Owner__c.field-meta.xml
<CustomField>
    <fullName>Event_Owner__c</fullName>
    <label>Event Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>