force-app/main/default/objects/Objects__c/fields/Event_Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Event_Start_Date_Time__c</fullName>
    <label>Event Start Datetime</label>
    <length>255</length>
    <type>Text</type>
</CustomField>